Update header emoji to file box icon

--- a/dashboard.html
+++ b/dashboard.html
@@ -803,7 +803,7 @@
 <body>
     <header class="header">
         <div class="header-content">
-            <div class="logo">📧 Explore the Epstein Files</div>
+            <div class="logo">🗃 Explore the Epstein Files</div>
             <div class="search-container">
                 <input type="text" class="search-input" id="searchInput"
                        placeholder="Search documents... (names, places, keywords)">
