--- a/dashboard.html
+++ b/dashboard.html
@@ -1025,9 +1025,9 @@
                             <p style="margin-bottom:1rem;font-size:0.95rem;line-height:1.6">This archive contains <strong>331,655 documents</strong>: emails, court filings, flight logs, financial records, and communications spanning 2002–2019. Search by name, place, or topic. Combine filters to narrow your results.</p>
                             <p style="font-size:0.85rem;color:var(--text-secondary);margin-bottom:1.5rem">Select a topic from the sidebar, or type a name to begin. Click multiple topics to narrow your search.</p>
                         </div>
-                        <div style="margin-top:1rem">
-                            <h4 style="font-size:0.8rem;color:var(--text-secondary);margin-bottom:0.75rem;text-transform:uppercase;letter-spacing:0.5px">Browse by Cluster</h4>
-                            <div id="landingClusters" style="display:flex;flex-wrap:wrap;gap:6px">
+                        <div style="margin-top:1.5rem">
+                            <h4 style="font-size:0.8rem;color:var(--text-secondary);margin-bottom:1rem;text-transform:uppercase;letter-spacing:0.5px">Browse by Cluster</h4>
+                            <div id="landingClusters" style="display:flex;flex-wrap:wrap;gap:8px;max-width:600px">
                                 <div style="color:var(--text-muted);font-size:0.8rem">Loading clusters...</div>
                             </div>
                         </div>
@@ -1203,16 +1203,17 @@
                 // Create color scale
                 const colors = ['#3498db', '#9b59b6', '#e74c3c', '#f39c12', '#1abc9c', '#34495e', '#e91e63', '#00bcd4'];
 
-                container.innerHTML = clusters.slice(0, 30).map((c, i) => {
-                    const size = Math.max(28, Math.min(50, 20 + Math.sqrt(c.n_chunks) / 3));
+                container.innerHTML = clusters.slice(0, 50).map((c, i) => {
+                    const size = Math.max(36, Math.min(60, 28 + Math.sqrt(c.n_chunks) / 2.5));
                     const color = colors[i % colors.length];
                     return `
                         <div class="landing-cluster" data-cluster="${c.cluster_id}" data-run="${c.run_label}"
-                             style="width:${size}px;height:${size}px;background:${color};border-radius:4px;display:flex;align-items:center;justify-content:center;cursor:pointer;font-size:0.65rem;color:white;font-weight:500;opacity:0.85;transition:all 0.15s"
+                             style="width:${size}px;height:${size}px;background:${color};border-radius:6px;display:flex;flex-direction:column;align-items:center;justify-content:center;cursor:pointer;color:white;font-weight:500;transition:all 0.15s;box-shadow:0 2px 4px rgba(0,0,0,0.1)"
                              title="Cluster ${c.cluster_id}: ${c.n_chunks.toLocaleString()} docs"
-                             onmouseover="this.style.opacity=1;this.style.transform='scale(1.1)'"
-                             onmouseout="this.style.opacity=0.85;this.style.transform='scale(1)'">
-                            ${c.cluster_id}
+                             onmouseover="this.style.transform='scale(1.1)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.2)'"
+                             onmouseout="this.style.transform='scale(1)';this.style.boxShadow='0 2px 4px rgba(0,0,0,0.1)'">
+                            <span style="font-size:0.7rem">${c.cluster_id}</span>
+                            <span style="font-size:0.55rem;opacity:0.8">${c.n_chunks > 1000 ? Math.round(c.n_chunks/1000) + 'k' : c.n_chunks}</span>
                         </div>
                     `;
                 }).join('');
